# Rust-AI-ChatBot

./: README.md
chatbot-backend/: Cargo.toml
chatbot-backend/src/: llm_model.rs  main.rs  model.rs
chatbot-frontend/: index.html  package-lock.json  package.json  vite.config.js
chatbot-frontend/src/: App.jsx
chatbot-frontend/src/componants/: Chat.jsx  Prompt.jsx
