[package]
name = "chatbot-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { git="https://github.com/tokio-rs/axum", branch="main"}
serde = { version = "1.0.171", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
llm = { git = "https://github.com/rustformers/llm" , branch = "main" }
rand = "0.8.5"
tower-http = { version = "0.4.1", features = ["cors"] }


[profile.dev.package.ggml-sys]
opt-level = 3
